[metadata]
name = pydora
version = attr: pandora.__version__
description = Python wrapper for Pandora API
long_description = file: README.rst
author = Mike Crute
author_email = mike@crute.us
url = https://github.com/mcrute/pydora
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Multimedia :: Sound/Audio :: Players

[options]
packages = find:
python_requires = >=3.8

install_requires =
    requests >=2, <3
    blowfish >=0.6.1, <1.0

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    pydora = pydora.player:main
    pydora-configure = pydora.configure:main

[tox:tox]
# tox 3.19 just totally fails without this

[testenv:format]
deps =
    black ==24.4.2

commands =
    black -l 79 -t py311 pandora/ pydora/ tests/ setup.py

[testenv:tests]
deps =
    pytest
    black ==24.4.2
    flake8 >=3.3
    coverage >=7

commands =
    black --check -l 79 -t py311 pandora/ pydora/ tests/ setup.py
    flake8 --statistics --ignore=E231 pandora/ pydora/ tests/ setup.py
    coverage run --source='pandora/,pydora/' -m pytest
    coverage report --fail-under 100 -m --include='pandora/*'
    coverage report -m --include='pydora/*'
    coverage html --include='pandora/*,pydora/*'

[testenv:release]
deps =
    build

commands =
    python -m build --sdist
    python -m build --wheel

[testenv:upload]
skip_install = true

deps =
    twine

passenv =
    TWINE_PASSWORD

commands =
    twine upload -u __token__ --non-interactive --skip-existing dist/*
